# structured-markdown

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
design/: 2026-06-26-feedback-update.md  2026-06-26-structured-markdown-project-notes.md  2026-06-27-Direction-and-Notes.md  2026-06-27-parse-assess-implementation-update.md  2026-06-27-pipe-the-pipeline-SRS.md  2026-06-27-tech-note-article-triage-note.md  2026-06-28-Future-Implementation-Tasks.md  2026-06-28-b1-parse-assess-implementation-update.md  imp-Parser-Reader-SRS.md  srs-Clients-Plugin.md  srs-Parser-Reader-SRS.md  srs-VS-Code-Plugin.md  structured-markdown-standard.md
design/2026-06-28-assess/: assess.md  azure-stack-acs-differences.md.json  azure-stack-arm-templates.md.json  azure-stack-compute-overview.md.json  azure-stack-connect-azure-stack.md.json  azure-stack-connect-vpn.md.json  azure-stack-considerations.md.json
docs/: 404.html  getting-started.md  index.html  index.md
docs/api/: index.html  index.md
docs/architecture/: contracts.md  diagnostics.md  diagrams.md  layers.md  overview.md  provenance.md
docs/developer-guide/: adapters.md  compatibility.md  schema-versioning.md  testing.md  validators.md
docs/getting-started/: index.html
docs/schemas/: parser-contract-v1.md  structured-markdown-v1.md
docs/search/: search_index.json
docs/user-guide/: author-feedback.md  cli.md  debug-inspection.md  markdown-validation.md  transform-readiness.md
docs_src/: getting-started.md  index.md
docs_src/api/: index.md
docs_src/architecture/: contracts.md  diagnostics.md  diagrams.md  layers.md  overview.md  provenance.md  uml.md
docs_src/concept/: comparison.md  document-type-triage.md  information-architecture.md  markdown-semantics.md  model-tuning.md  parsing-approaches.md  structured-markdown.md
docs_src/developer-guide/: adapters.md  compatibility.md  testing.md  (+2 more)
model/: README.md  construction-of-schema.md  model-overview.md  schema-index.md
tools/: generate_json_schemas.py  update_expected_contracts.py  validate_fixtures.py
(+236 files in other folders)
