[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "structure-parser"
version = "0.1.0"
description = "Structure-aware parser and validator for structured Markdown and rendered HTML"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Matt Briggs" }]
keywords = ["markdown", "parser", "structured-content", "dita", "documentation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup",
]
dependencies = [
    "pydantic>=2.7",
    "typer>=0.12",
    "markdown-it-py>=3.0",
    "mdit-py-plugins>=0.4",
    "lxml>=5.2",
    "jsonschema>=4.22",
    "PyYAML>=6.0",
    "python-json-logger>=2.0",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML",
    "types-jsonschema",
    "pre-commit>=3.7",
    "mkdocs-material>=9.5",
]

[project.scripts]
structure-parser = "structure_parser.cli:app"

[project.urls]
Repository = "https://github.com/mb/structured-markdown"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
structure_parser = ["py.typed"]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ANN", "B", "C4", "SIM"]
ignore = ["ANN101", "ANN102", "ANN401"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
packages = ["structure_parser"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["structure_parser"]
branch = true

[tool.coverage.report]
fail_under = 90
show_missing = true
